# Antibody_liability_reduction_tool

./: README.md  pyproject.toml
.cache/antibody_tool/: cache.db
.github/workflows/: ci.yml
config/: default.yaml
data/: abysis_vh_frequencies.json  imgt_surface_exposure.json
examples/: example_input.fasta  run_example.py
scripts/: refresh_abysis_cache.py
src/antibody_liability_tool/: __init__.py  __main__.py  app.py  caching.py  cli.py  config.py  pipeline.py
src/antibody_liability_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/antibody_liability_tool/evaluators/: __init__.py  base.py  deepsp.py  oasis.py  tap.py
src/antibody_liability_tool/liabilities/: __init__.py  detector.py
src/antibody_liability_tool/mutations/: __init__.py  generator.py  motif_checker.py
src/antibody_liability_tool/numbering/: __init__.py  imgt.py
src/antibody_liability_tool/optimization/: __init__.py  bayesian.py  combinatorial.py  scorer.py
src/antibody_liability_tool/reporting/: __init__.py  fasta_export.py  html_report.py  visualization.py
src/antibody_liability_tool/surface/: __init__.py  exposure.py
tests/: conftest.py  test_combinatorial.py  test_config.py  test_liabilities.py  test_motif_checker.py  test_mutations.py  test_numbering.py  test_reporting.py  test_scoring.py  test_surface.py  test_tap.py
