[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antibody-liability-tool"
version = "0.1.0"
description = "Pipeline for identifying and reducing surface-exposed liabilities in antibody VH sequences"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Andrew Grassetti"},
]

dependencies = [
    "anarci>=1.3",
    "biopython>=1.81",
    "biophi>=1.0",
    "click>=8.1",
    "numpy>=1.24",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "scikit-learn>=1.3",
    "botorch>=0.9",
    "gpytorch>=1.11",
    "torch>=2.0",
    "plotly>=5.18",
    "jinja2>=3.1",
    "diskcache>=5.6",
    "tqdm>=4.66",
]

[project.optional-dependencies]
deepsp = ["DeepSP>=1.0"]
tap-automation = ["playwright>=1.40"]
structural = ["freesasa>=2.2"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
]

[project.scripts]
antibody-liability-tool = "antibody_liability_tool.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
]
